# mIcal_anal

./: CMakeLists.txt  GNUmakefile  README.md  batch_execute
extras/: corrections_pos_time_26122018.root
inc/: CircleFitByChernovLesort.cpp  DetectorParameterDef.hh  Fcnsg.h  FieldPropagator.hh  GeneralRecoInfo.hh  Ical0DetectorParameterDef.hh  InoCal0Hit.hh  InoCluster.h  InoDigiAlg.hh  InoHit.h  InoNewFitAlg.h  InoRecoAlg.hh  InoStrip.h  InoTrack.h  InoTrackCand.h  InoTrackFinder.h  InoTrackFitAlg.h  InoTrackSegment.h  MultiSimAnalysisDigi.hh  ParameterMessenger.hh  RPCEve.h  SwimParticle.h  SwimSwimmer.h  Utilities.cpp  circle.h  data.h  micalDetectorParameterDef.hh  mystuff.h  vect_manager.h
src/: DetectorParameterDef.cc  FieldPropagator.cc  GeneralRecoInfo.cc  HitPosdict.cc  Hitsdict.cc  Ical0DetectorParameterDef.cc  InoCal0Hit.cc  InoCluster.cc  InoDigiAlg.cc  InoHit.cc  InoMuRange.cc  InoNewFitAlg.cc  InoRecoAlg.cc  InoStrip.cc  InoTrack.cc  InoTrackCand.cc  InoTrackFinder.cc  InoTrackFitAlg.cc  InoTrackSegment.cc  MultiSimAnalysisDigi.cc  ParameterMessenger.cc  SwimParticle.cc  SwimSwimmer.cc  anal_ical.cc  micalDetectorParameterDef.cc  vect_manager.cc
